<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FinalActivity">


    <TextView
        android:id="@+id/show_result_textview"
        android:layout_width="289dp"
        android:layout_height="96dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:shadowColor="@android:color/black"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="2"
        android:text="@string/want_to_see_your_finished_story"
        android:textColor="@android:color/white"
        android:textSize="32sp"
        android:textStyle="bold"
        app:fontFamily="casual"
        app:layout_constraintBottom_toTopOf="@+id/show_story_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.481" />

    <!-- onClick method name does not exist -->
    <!-- Prefer wrap content for button height and width -->
   <Button
       android:id="@+id/show_story_button"
       android:layout_width="134dp"
       android:layout_height="62dp"
       android:layout_marginStart="8dp"
       android:layout_marginLeft="8dp"
       android:layout_marginEnd="8dp"
       android:layout_marginRight="8dp"
       android:layout_marginBottom="268dp"
       android:onClick="ShowStory"
       android:text="@string/yes_please"
       app:layout_constraintBottom_toTopOf="@+id/story_textview"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent" />

   <TextView
       android:id="@+id/story_textview"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginStart="16sp"
       android:layout_marginLeft="16sp"
       android:layout_marginEnd="16sp"
       android:layout_marginRight="16dp"
       android:layout_marginBottom="196dp"
       android:gravity="center"
       android:shadowColor="@android:color/black"
       android:shadowDx="2"
       android:shadowDy="2"
       android:shadowRadius="2"
       android:textColor="@android:color/white"
       android:textSize="28sp"
       android:textStyle="bold"
       app:fontFamily="casual"
       android:text="@string/show_story_here"
       android:visibility="gone"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent" />

   <ImageView
       android:id="@+id/imageView8"
       android:layout_width="194dp"
       android:layout_height="183dp"
       android:layout_marginTop="12dp"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.084"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@id/story_textview"
       app:srcCompat="@drawable/pikachu" />

    <!-- onClick method name does not exist -->

    <Button
       android:id="@+id/share_button"
       android:layout_width="111dp"
       android:layout_height="56dp"
       android:layout_marginStart="8dp"
       android:layout_marginLeft="8dp"
       android:layout_marginTop="8dp"
       android:layout_marginEnd="8dp"
       android:layout_marginRight="8dp"
       android:layout_marginBottom="8dp"
       android:onClick="shareStory"
       android:text="@string/share"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.531"
       app:layout_constraintStart_toEndOf="@+id/imageView8"
       app:layout_constraintTop_toTopOf="@+id/imageView8"
       app:layout_constraintVertical_bias="0.0" />
</android.support.constraint.ConstraintLayout>